--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-vector-icons/common": "^11.0.0",
+    "@react-native-vector-icons/fontawesome6": "^6.7.1",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "@tanstack/react-query": "^5.66.0",
     "react": "18.3.1",
-    "react-native": "0.77.0"
+    "react-hook-form": "^7.54.2",
+    "react-native": "0.77.0",
+    "react-native-safe-area-context": "^5.1.0",
+    "react-native-screens": "^4.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
