--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-hook-form": "^7.54.2",
     "react-native": "0.77.0",
     "react-native-safe-area-context": "^5.1.0",
-    "react-native-screens": "^4.6.0"
+    "react-native-screens": "^4.6.0",
+    "react-native-svg": "^15.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
