--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "@react-native-vector-icons/common": "^11.0.0",
     "@react-native-vector-icons/fontawesome6": "^6.7.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
@@ -18,9 +19,13 @@
     "react": "18.3.1",
     "react-hook-form": "^7.54.2",
     "react-native": "0.77.0",
+    "react-native-config": "^1.5.3",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.6.0",
-    "react-native-svg": "^15.11.1"
+    "react-native-svg": "^15.11.1",
+    "react-native-webview": "^13.13.2",
+    "rn-secure-storage": "^3.0.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
