--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.3.1",
     "react-hook-form": "^7.54.2",
     "react-native": "0.77.0",
+    "react-native-clipboard": "^0.0.5",
     "react-native-collapsible": "^1.6.2",
     "react-native-config": "^1.5.3",
     "react-native-render-html": "^6.3.4",
