--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@tanstack/react-query": "^5.66.0",
+    "date-fns-tz": "^3.2.0",
     "query-string": "^9.1.1",
     "react": "18.3.1",
     "react-hook-form": "^7.54.2",
